# flowcean

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  AGenC - Verknüpfung.lnk  AUTHORS  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  LICENSE.txt  README.md  accelerometer_preprocessing.ipynb  debug_run.py  example-agenc-runtime-conf.yml  example_telegram.md  externalFramework.proto  generatePythonProto.bat  justfile  learner.py  metadata.py  metrics.py  mkdocs.yml  noxfile.py  predit_failure_time.py  processed_data.csv  processed_data_metadata.yml  pyproject.toml  requirements.txt  ruff.toml  run.py  run_ode.py  split_train_test.py  test.csv  test_test_data.csv  train.csv  typos.toml
.ci/: Containerfile  Dockerfile  README.md
.dvc/: config
.github/workflows/: build-java-container.yml  ci.yml  pages.yml  pull_request.yml  release.yml
data/accelerometer/: metadata.yml  processed_data.csv  processed_data_metadata.yml  test.csv  test_data_b.csv  train.csv
docs/: SUMMARY.md  command-line-interface.md  conf.py  dvc.md  impressum.md  index.md  installation.md  logging.md  references.bib  spelling_wordlist.txt  transforms.md
docs/agenc/: cml.md  index.md  kalp.md  offis.md  tuhh.md  use_cases.md  vivavis.md
docs/examples/: automatic_lashing_platform.md  coffee_machine.md  ddtig.md  energy_system.md  failure_time_prediction.md  hs_simple.md  hybrid_systems.md  index.md  jupyter_notebook_turtlesim.md  one_tank.md  one_tank_incremental.md  robot_localization_failure.md  simulated_hybrid_system.md  trace_prediction.md  turtlesim.md  xor.md
docs/getting_started/: SUMMARY.md  documentation.md  dvc.md  installation.md  new_project.md  preparation.md  prerequisites.md
docs/reference/: cli.md  data.md  environment.md  index.md  learner.md  learners.md  metric.md  metrics.md  models.md  transform.md  transforms.md
docs/source/: conf.py  index.rst  installation.rst
docs/stylesheets/: extra.css
examples/: callback_demo.py
examples/robot_localization_failure/: .gitignore  check_duplicates.py  compare_models_roc.py  config.yaml  config_manav.yaml  exp.py  explore.py  feature_images.py  generate_particlecloud_images.py  generate_stacked_images_cnn.py  generate_yaml.py  inspect_and_show_channels.py  inspect_tensor_images.py  inspect_tensors.py  list_labels_in_cache.py  map_play.py  model_inference.py  particle_cloud_images.py  particle_image.py  plot_pos_error_histogram.py  plot_roc_auc.py  plot_roc_auc_full.py  predict_single_tensor.py  pyproject.toml  rec_20241021_152106.dvc  recordings.dvc  rosbag.py  run.py  run2.py  run_optuna.py  show_image_from_tensor.py  simulation.dvc  slice_ts.py  training copy.py  training.py  training.yaml  visualize_normalized_channels.py  visualize_particle_dilation.py
examples/robot_localization_failure/architectures/: cnn copy.py  cnn.py  cnn_4_layers.py  cnn_from_paper.py  complex_cnn.py  medium_complex_cnn.py  resnet18.py  simple_cnn.py
examples/robot_localization_failure/custom_learners/: image_based_lightning_learner.py
examples/robot_localization_failure/custom_transforms/: affine.py  collapse.py  detect_delocalizations.py  images_to_tensor.py  kl_divergence.py  localization_status.py  map_image.py  particle_cloud_image.py  particle_cloud_statistics.py  particle_image.py  scan_image.py  scan_map.py  scan_map_statistics.py  shift_timestamps.py  slice_time_series.py  zero_order_hold_matching.py
examples/robot_localization_failure/image_based_pipeline/: training.py
examples/robot_localization_failure/ml_pipeline/: README.md  clean.py  run_all.py  threshold_sweep.py
examples/robot_localization_failure/ml_pipeline/dataset/: bag_processor.py  build_dataset.py  helpers.py
examples/robot_localization_failure/ml_pipeline/debug/: inspect_data.py
examples/robot_localization_failure/ml_pipeline/evaluation/: evaluate_model.py  tune_threshold.py
examples/robot_localization_failure/ml_pipeline/training/: train_model.py  train_model_optuna.py  train_model_rf.py  train_model_xgb.py
examples/robot_localization_failure/ml_pipeline/utils/: cleaning.py  common.py  paths.py
examples/robot_localization_failure/recordings/: .gitignore  rec_20250618_113817.dvc  rec_20250618_134101.dvc  rec_20250704_173434.dvc  rec_20250704_173434_sliced.dvc  summarize_bags.py  summarize_obstacles_and_delocalizations.py  summarize_topics.py  wgtl.dvc  wgtl_data_collection_experiment_overview.csv  wgtl_half_split.dvc
examples/robot_localization_failure/scripts/: evaluate_classifier.py  generate_data_from_bag_file.py  generate_stacked_images_cnn.py  generate_yaml.py  inspect_and_show_channels.py  inspect_tensor_images.py  inspect_tensors.py  list_labels_in_cache.py  show_image_from_tensor.py  single_script_pipeline.py  single_script_pipeline_resnet.py  train_and_save_baseline_classifier.py  visualize_cached_images.py  visualize_particle_dilation.py
examples/robot_localization_failure/statistical_feature_based_pipeline/: run.py  run_optuna.py  training.py
examples/robot_localization_failure/tests/: test_localization_status.py  test_particle_cloud_image.py  test_particle_cloud_statistics.py  test_scan_map.py  test_slice_time_series.py
examples/turtlesim/: .gitignore  _helper_functions.py  config.yaml  ipin2025_training.ipynb  pyproject.toml  recordings.dvc  run.py
examples/turtlesim/custom_metrics/: euclidean_distance.py
examples/turtlesim/ros_msgs/turtlesim/msg/: Pose.msg
experiments/: failure_time_prediction.yaml
flowcean_ros/: README.md  package.xml  setup.cfg  setup.py
flowcean_ros/config/: topic_info.yaml
flowcean_ros/flowcean_ros/: data_preprocessor.py
flowcean_ros/tests/: test_data_preprocessor.py
proto/: generateJavaDefinitions.sh  generatePythonDefinitions.sh  grpcLearner.proto  learner.proto
py_external_framework/: externalFrameworkAdapter.py  externalFramework_pb2.py  externalFramework_pb2.pyi  externalFramework_pb2_grpc.py
scripts/: generate_reference_pages.py
tests/: conftest.py  test_data_loading.py  test_learners.py  test_metrics.py  test_select.py  test_sliding_window.py  test_split.py  test_timeseries_transform.py
(+2624 files in other folders)
