<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flowcean_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="markus.knitt@tuhh.de">markus</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>polars</depend>
  <depend>numpy</depend>
  <exec_depend>flowcean</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
