[project]
name = "robot-localization-failure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
  "flowcean",
  "matplotlib>=3.10.0",
  "opencv-python>=4.11.0.86",
  "pillow>=11.1.0",
  "numba>=0.61.0",
]

[tool.pyright]
extends = "../../pyproject.toml"

[tool.uv.sources]
flowcean = { workspace = true }
